--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'net.researchgate.release' version '2.2.1'
+    id 'com.github.hierynomus.license' version '0.12.1'
 }
 apply from: 'src/main/gradle/ii-bda.gradle'
 
