Use spotless for code formatting
license-gradle-plugin dropped as spotless also checks the license header; use the eclipseformat.xml from diffplug; readme updated

--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,30 @@
-plugins {
-    id 'net.researchgate.release' version '2.2.1'
-    id 'com.github.hierynomus.license' version '0.12.1'
-}
 apply from: 'src/main/gradle/ii-bda.gradle'
-
 
 group='de.interactive_instruments.bda'
 description='interactive instruments build and deployment plugin for gradle'
 
 jar {
-    from('src/main/gradle') {
-        include '*.gradle'
-        include 'apache2-license-header.txt'
-        include 'checkstyle.xml'
-    }
+	from('src/main/gradle') {
+		include '*.gradle'
+	}
+	from('src/main/spotless') {
+		include '*.*'
+	}
+	from('src/main/eclipse') {
+		include '*.*'
+	}
 }
 
 // Overwrite uploadArchives with the plugins releases repo (restricted to ii developers)
 uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "http://services.interactive-instruments.de/etfdev-af/plugins-releases-local") {
-                authentication(userName: gradle.rootProject.ext.r_user, password: gradle.rootProject.ext.r_pwd)
-            }
-            snapshotRepository(url: "http://services.interactive-instruments.de/etfdev-af/plugins-snapshots-local") {
-                authentication(userName: gradle.rootProject.ext.r_user, password: gradle.rootProject.ext.r_pwd)
-            }
-        }
-    }
+	repositories {
+		mavenDeployer {
+			repository(url: "http://services.interactive-instruments.de/etfdev-af/plugins-releases-local") {
+				authentication(userName: gradle.rootProject.ext.r_user, password: gradle.rootProject.ext.r_pwd)
+			}
+			snapshotRepository(url: "http://services.interactive-instruments.de/etfdev-af/plugins-snapshots-local") {
+				authentication(userName: gradle.rootProject.ext.r_user, password: gradle.rootProject.ext.r_pwd)
+			}
+		}
+	}
 }
