--- a/src/main/gradle/ii-bda.gradle
+++ b/src/main/gradle/ii-bda.gradle
@@ -40,6 +40,12 @@ buildscript {
     }
 }
 
+final GradleVersion currentGradleVersion = GradleVersion.current()
+final GradleVersion gradle2_13 = GradleVersion.version('2.13')
+if(currentGradleVersion<gradle2_13) {
+  throw new GradleException("Your Gradle version is older than 2.13")
+}
+
 ext.versionFile = rootProject.file("./version.properties")
 
 // Set and check project version
@@ -94,36 +100,72 @@ println "ETF-BDA: Authenticating will be done as user ${ext.r_user}"
 ext.qualityReports = project.hasProperty("etf.dev.quality.reports") &&
         project.getProperty("etf.dev.quality.reports") == "true"
 
+
+task updateReadme << {
+  description 'Replace patterns found in the Readme.md'
+
+  final File readmeFile = rootProject.file("./Readme.md")
+  if (readmeFile.exists()) {
+    final String afRepoUrl = uploadArchives.repositories.mavenDeployer.repository.url
+    // snapshot url needed? uploadArchives.repositories.mavenDeployer.snapshotRepository.url
+    assert afRepoUrl != null
+
+    // Prefer zips
+    final String file = uploadArchives.artifacts.files.sort().reverse()[0].name
+
+    final String baseUrl = afRepoUrl +"/"+ rootProject.group.replace('.','/') +
+      "/"+ rootProject.name +"/";
+
+    final String completeUrl = baseUrl + rootProject.version +"/"+ file
+
+    final String latestVersionShield = '[![Latest version]'+
+      '(http://img.shields.io/badge/latest%20version-'+rootProject.version+'-blue.svg)]'+
+      '('+completeUrl+')'
+
+    String readmeText = readmeFile.text
+    readmeText = readmeText.replaceFirst(
+      /\[\!\[Latest version\]\(http:\/\/img\.shields\.io\/badge\/latest\%20version-.*/ ,
+        latestVersionShield)
+    readmeFile.write(readmeText)
+  }
+}
+
 allprojects {
 
     // Default lib versions
     ext {
-      // testCompile group: 'junit', name: 'junit', version: junitVersion
-      junitVersion = '4.11'
+      // testCompile group: 'junit', name: 'junit', version: etf_junitTestVersion
+      etf_junitTestVersion = '4.12'
 
-      // compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jApiVersion
-      slf4jApiVersion = '1.7.12'
+      // testCompile group: 'ch.qos.logback', name: 'logback-classic', version: etf_logbackVersion
+      etf_logbackVersion = '1.1.7'
 
-      // compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3Version
-      commonsLang3Version = '3.4'
+      // compile group: 'org.slf4j', name: 'slf4j-api', version: etf_slf4jApiVersion
+      etf_slf4jApiVersion = '1.7.20'
 
-      // compile group: 'commons-codec', name: 'commons-codec', version: commonsCodecVersion
-      commonsCodecVersion = '1.10'
+      // compile group: 'org.apache.commons', name: 'commons-lang3', version: etf_commonsLang3Version
+      etf_commonsLang3Version = '3.4'
 
-      // compile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
-      commonsIoVersion = '2.4'
+      // compile group: 'commons-codec', name: 'commons-codec', version: etf_commonsCodecVersion
+      etf_commonsCodecVersion = '1.10'
 
-      // compile group: 'xerces', name: 'xercesImpl', version: xercesVersion
-      xercesVersion = '2.11.0.beta'
+      // compile group: 'commons-io', name: 'commons-io', version: etf_commonsIoVersion
+      etf_commonsIoVersion = '2.5'
 
-      // compile group: 'xml-apis', name: 'xml-apis', version: xmlApisVersion
-      xmlApisVersion = '1.4.01'
+      // compile group: 'commons-collections', name: 'commons-collections', version: etf_commonsCollectionsVersion
+      etf_commonsCollectionsVersion = '3.2.2'
 
-      // compile group: 'commons-collections', name: 'commons-collections', version: commonsCollectionsVersion
-      commonsCollectionsVersion = '3.2.1'
+      // compile group: 'xerces', name: 'xercesImpl', version: etf_xercesVersion
+      etf_xercesVersion = '2.11.0.beta'
 
-      // compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: jaxbVersion
-      jaxbVersion = '2.2.11'
+      // compile group: 'xml-apis', name: 'xml-apis', version: etf_xmlApisVersion
+      etf_xmlApisVersion = '1.4.01'
+
+      // compile group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: etf_jaxbVersion
+      etf_jaxbVersion = '2.2.11'
+
+      // compile group: 'de.interactive_instruments', name: 'ii-commons-util', version: etf_iiCommonsVersion
+      etf_iiCommonsVersion = '1.3.0'
     }
 
     apply plugin: 'java'
@@ -174,7 +216,7 @@ allprojects {
             mavenLocal()
 
             maven {
-                url "http://services.interactive-instruments.de/etfdev-af/snapshot"
+                url "https://services.interactive-instruments.de/etfdev-af/snapshot"
                 credentials {
                     username gradle.rootProject.ext.r_user
                     password gradle.rootProject.ext.r_pwd
@@ -182,7 +224,7 @@ allprojects {
             }
         } else {
             maven {
-                url "http://services.interactive-instruments.de/etfdev-af/release"
+                url "https://services.interactive-instruments.de/etfdev-af/release"
                 credentials {
                     username gradle.rootProject.ext.r_user
                     password gradle.rootProject.ext.r_pwd
@@ -374,6 +416,7 @@ allprojects {
         }
     }
 
+
     ///////////////
     // RELEASING //
     ///////////////
@@ -405,6 +448,7 @@ allprojects {
     }
 
     if (tasks.findByPath('uploadArchives') != null) {
+        beforeReleaseBuild.dependsOn updateReadme
         afterReleaseBuild.dependsOn uploadArchives
     }
 
